--- a/.gitignore
+++ b/.gitignore
@@ -165,4 +165,8 @@ gradle-app.setting
 # End of https://www.gitignore.io/api/java,macos,gradle,intellij
 
 .idea
-.gradle
+.gradle/
+.bin
+.lock
+.jar
+.xml
